# acvm-backend-plonky2

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  book.toml  prepare_compiled_noir_test_programs.py  run-commands.py
plonky2-backend/: Cargo.toml  Makefile  build_and_deploy_backend.sh  run_examples.py
plonky2-backend/benches/: benchmarking.rs
plonky2-backend/benches/noir_programs_for_benchmarking/assert_zero_long_opcode/: Nargo.toml  Prover.toml
plonky2-backend/benches/noir_programs_for_benchmarking/multiple_assert_zeroes/: Nargo.toml  Prover.toml
plonky2-backend/benches/noir_programs_for_benchmarking/multiple_range_checks_u8/: Prover.toml  generator.py
plonky2-backend/benches/noir_programs_for_benchmarking/multiple_xor_u8/: Nargo.toml  Prover.toml  program_generator.py
plonky2-backend/example_programs/basic_assert_zero/: Nargo.toml
plonky2-backend/example_programs/basic_assert_zero/src/: main.nr
plonky2-backend/example_programs/basic_div/: Nargo.toml  Prover.toml  Verifier.toml
plonky2-backend/example_programs/basic_div/proofs/: basic_div.proof
plonky2-backend/example_programs/basic_div/src/: main.nr
plonky2-backend/example_programs/basic_if/: Nargo.toml  Prover.toml  Verifier.toml
plonky2-backend/example_programs/fibonacci/: Nargo.toml  Verifier.toml
plonky2-backend/noir_example/: Nargo.toml  prove_with_plonky2_backend.sh
plonky2-backend/src/: argument_parsing.rs  binary_digits_target.rs  circuit_translation.rs  lib.rs  main.rs  noir_and_plonky2_serialization.rs
plonky2-backend/src/actions/: mod.rs  prove_action.rs  verify_action.rs  write_vk_action.rs
plonky2-backend/src/biguint/: biguint.rs  serialization.rs  witness.rs
plonky2-backend/src/circuit_translation/: assert_zero_translator.rs  binary_digits_target.rs  ecdsa_secp256k1_translator.rs  memory_translator.rs  mod.rs  range_check_strategies.rs  sha256_translator.rs  targets.rs  xor_strategies.rs
plonky2-backend/src/plonky2_ecdsa/: mod.rs  modifications.md
plonky2-backend/src/prove_action/: mod.rs
plonky2-backend/src/prover_interface/: mod.rs
(+87 files in other folders)
