[package]
name = "plonky2-backend"
version = "0.1.0"
edition = "2021"


[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
acir = "0.45.0"
plonky2 = { version = "0.2", default-features = false, features = ["std", "parallel"]}
num-bigint = "0.4"
jemallocator = "0.5.0"

[patch.crates-io]
acir_field = { path = "../noir/acvm-repo/acir_field"}

#[features]
#default = ["bls12_381"]
#bls12_381 = ["dep:ark.bls12-381", "dep:ark-ff"]