[package]
name = "plonky2-backend"
version = "0.1.0"
edition = "2021"


[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
acir = "0.45.0"
plonky2 = { version = "0.2", default-features = false, features = ["std", "parallel"]}
num-bigint = "0.4"
jemallocator = "0.5.0"

[patch.crates-io]
acir = { path = "../noir/acvm-repo/acir"}
acir_field = { path = "../noir/acvm-repo/acir_field"}
plonky2 = { path = "../plonky2/plonky2"}
