[package]
name = "plonky2-backend"
version = "0.1.0"
edition = "2021"

[lib]
name = "plonky2_backend"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
acir = "0.47.0"
acir_field = "0.47.0"
plonky2 = { version = "0.2.2", default-features = false, features = ["std", "parallel"]}
num-bigint = "0.4"
jemallocator = "0.5.0"
sha2 = "0.10.8"
base64 = "0.22.1"
flate2 = "1.0.30"
tar = "0.4.41"
parameterized = "2.0.0"
clap = { version = "4.5.9", features = ["derive", "cargo"] }
criterion = "0.3"
num = "0.4.3"
itertools = "0.10.5"
anyhow = "1.0.83"
rand = "0.8.5"
cfg-if = "1.0.0"

[patch.crates-io]
acir = { path = "../noir/acvm-repo/acir"}
acir_field = { path = "../noir/acvm-repo/acir_field"}
plonky2 = { path = "../plonky2/plonky2"}

[features]
default = ["strategy-rangecheck-lookup", "strategy-xor-lookup"]

strategy-rangecheck-lookup = []
strategy-rangecheck-bitsplit = []

strategy-xor-lookup = []
strategy-xor-bitsplit = []
